examples/tasker_primitive_obsession/src/domain/errors/task_assigne_email_errors.py
from .email_errors import InvalidEmailFormatError


class InvalidTaskAssigneeEmailError(InvalidEmailFormatError):
    pass
